// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the \`DueDateBar\` component when \`isPaid\` is false  and \`expirationInfo\` is EXPIRED  should match the snapshot 1`] = `
Array [
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "minHeight": 64,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "#475A6D",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={40}
      vbWidth={40}
      width={40}
    >
      <RNSVGGroup>
        <RNSVGGroup
          name="calendar"
        >
          <RNSVGPath
            d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
            fill={4294967295}
            name="icon"
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4282866285}
            font={
              Object {
                "fontSize": 10,
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "30%",
              ]
            }
          >
            <RNSVGTSpan
              content="Dec"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4282866285}
            font={
              Object {
                "fontSize": 18,
                "fontWeight": "bold",
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "65%",
              ]
            }
          >
            <RNSVGTSpan
              content="01"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      hspacer={true}
      small={true}
      style={Object {}}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "paddingLeft": 5,
            "paddingRight": 50,
          },
        ]
      }
      testID="DueDateBar_TextContent"
      white={true}
    >
      This notice expired at
      <Text
        bold={true}
        style={
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          }
        }
        white={true}
      >
         13:29 
      </Text>
      on
      <Text
        bold={true}
        style={
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          }
        }
        white={true}
      >
         12/01/2021
      </Text>
    </Text>
  </View>,
  <View
    large={true}
    spacer={true}
    style={Object {}}
  />,
]
`;

exports[`the \`DueDateBar\` component when \`isPaid\` is false  and \`expirationInfo\` is EXPIRING  should match the snapshot 1`] = `
Array [
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "minHeight": 64,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "#F5F6F7",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={40}
      vbWidth={40}
      width={40}
    >
      <RNSVGGroup>
        <RNSVGGroup
          name="calendar"
        >
          <RNSVGPath
            d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
            fill={4282866285}
            name="icon"
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 10,
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "30%",
              ]
            }
          >
            <RNSVGTSpan
              content="Dec"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 18,
                "fontWeight": "bold",
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "65%",
              ]
            }
          >
            <RNSVGTSpan
              content="01"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      hspacer={true}
      small={true}
      style={Object {}}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "paddingLeft": 5,
            "paddingRight": 50,
          },
        ]
      }
      testID="DueDateBar_TextContent"
      white={false}
    >
      This notice will expire on
      <Text
        bold={true}
        style={
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          }
        }
      >
         12/01/2021 
      </Text>
    </Text>
  </View>,
  <View
    large={true}
    spacer={true}
    style={Object {}}
  />,
]
`;

exports[`the \`DueDateBar\` component when \`isPaid\` is false  and \`expirationInfo\` is VALID  should match the snapshot 1`] = `
Array [
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "minHeight": 64,
          "paddingHorizontal": 24,
          "paddingVertical": 12,
        },
        Object {
          "backgroundColor": "#F5F6F7",
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={40}
      bbWidth={40}
      focusable={false}
      height={40}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 40,
            "width": 40,
          },
        ]
      }
      vbHeight={40}
      vbWidth={40}
      width={40}
    >
      <RNSVGGroup>
        <RNSVGGroup
          name="calendar"
        >
          <RNSVGPath
            d="m 33,0 h 3 c 2.209139,0 4,1.790861 4,4 v 32 c 0,2.209139 -1.790861,4 -4,4 H 4 C 1.790861,40 0,38.209139 0,36 V 4 C 0,1.790861 1.790861,0 4,0 h 3 v 3 h 4 V 0 h 18 v 3 h 4 z"
            fill={4282866285}
            name="icon"
            propList={
              Array [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 10,
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "30%",
              ]
            }
          >
            <RNSVGTSpan
              content="Dec"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="central"
            content={null}
            dx={Array []}
            dy={Array []}
            fill={4294967295}
            font={
              Object {
                "fontSize": 18,
                "fontWeight": "bold",
                "textAnchor": "middle",
              }
            }
            propList={
              Array [
                "fill",
              ]
            }
            rotate={Array []}
            x={
              Array [
                "50%",
              ]
            }
            y={
              Array [
                "65%",
              ]
            }
          >
            <RNSVGTSpan
              content="01"
              dx={Array []}
              dy={Array []}
              font={Object {}}
              rotate={Array []}
              x={Array []}
              y={Array []}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      hspacer={true}
      small={true}
      style={Object {}}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          },
          Object {
            "flex": 1,
            "paddingLeft": 5,
            "paddingRight": 50,
          },
        ]
      }
      testID="DueDateBar_TextContent"
      white={false}
    >
      This notice will expire on
      <Text
        bold={true}
        style={
          Object {
            "color": "#000",
            "fontFamily": "System",
            "fontSize": 16,
          }
        }
      >
         12/01/2021 
      </Text>
    </Text>
  </View>,
  <View
    large={true}
    spacer={true}
    style={Object {}}
  />,
]
`;

exports[`the \`DueDateBar\` component when \`isPaid\` is true  should match the snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "backgroundColor": "#00C5CA",
        "flexDirection": "row",
        "padding": 24,
      },
    ]
  }
>
  <Text
    accessibilityElementsHidden={true}
    accessibilityLabel=""
    accessible={false}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    style={
      Array [
        Object {
          "color": "#17324D",
          "fontSize": 12,
        },
        Array [
          Object {},
          Object {
            "color": "#17324D",
          },
          Object {},
        ],
        Object {
          "fontFamily": "io-icon-font",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "System",
          "fontSize": 16,
        },
        Object {
          "paddingHorizontal": 24,
        },
        Object {
          "color": "#17324D",
        },
      ]
    }
  >
    This notice has been already paid!
  </Text>
</View>
`;
